# iaa-macos-test

./: AGENTS.md  CLAUDE.md  build.py  iaa.spec  justfile  pyproject.toml  release.py
.github/workflows/: build-macos.yml
doc/: CHANGELOG.md
iaa/: context.py  main.py  telemetry.py
iaa/application/framework/dsl/: __init__.py  refs.py  runtime.py  specs.py
iaa/application/framework/dsl/qml/: FieldRenderer.qml  FormPageView.qml
iaa/application/framework/dsl/qml/components/: FormField.qml  GridItemPicker.qml  SegmentedButton.qml
iaa/application/framework/dsl/qml/controls/: DslCheckboxField.qml  DslHotkeyField.qml  DslIconItemPicker.qml  DslMumuPicker.qml  DslNoticeBlock.qml  DslSegmentedField.qml  DslSelectField.qml  DslTextField.qml  DslTransferList.qml  Select.qml
iaa/application/qt/: index.py  platform_win32.py
iaa/application/qt/controllers/: __init__.py  app_controller.py  global_hotkey_controller.py  help_controller.py  log_bridge.py  log_routing.py  preferences_controller.py  profile_store_backend.py  progress_bridge.py  run_controller.py  scrcpy_controller.py  settings_controller.py  tab_manager.py
iaa/application/qt/forms/: context.py  preferences_form.py  settings_form.py
iaa/application/qt/models/: __init__.py  mappings.py
iaa/application/qt/qml/: Globals.qml  MainWindow.qml  Modal.qml  Notice.qml  ProfileStore.qml  qmldir
iaa/application/qt/qml/components/: ModalHost.qml  NoticeHost.qml  PageContainer.qml  PageHeader.qml  SideNavigationBar.qml  TabContent.qml  TabStrip.qml  TitleBar.qml  WindowControls.qml
iaa/application/qt/qml/controls/: DslResolutionSelect.qml
iaa/application/qt/qml/dialogs/: AutoLiveDialog.qml  ConfigManagerDialog.qml
iaa/application/qt/qml/pages/: AboutPage.qml  ControlPage.qml  HelpPage.qml  LogPage.qml  OverviewPage.qml  PreferencesPage.qml  SettingsPage.qml
iaa/application/service/: assets_service.py  config_service.py  custom_emulator.py  help_service.py  iaa_service.py  qemu_grpc.py  scheduler.py  screen_recorder.py  tab_session.py
iaa/config/: base.py  manager.py  migration.py  migrations.py  schemas.py  shared.py
iaa/definitions/: consts.py  enums.py
iaa/game_ui/: list_view.py  scrollable.py  side_tabbar.py
iaa/game_ui/sekai/: __init__.py  camera.py  joystick.py
iaa/tasks/: _dump_sekai_home.py  cm.py  common.py  registry.py  start_game.py
iaa/tasks/live/: live.py
iaa/tasks/mysekai/: _fragments.py
resources/cn/map/: screenshot_intersection_1.png.json
resources/cn/shop/: screenshot_event_shop.png.json
resources/jp/map/: screenshot_intersection_1.png.json
resources/jp/mysekai/: screenshot_crowded.png.json  screenshot_home.png.json
resources/jp/shop/: screenshot_event_shop.png.json
resources/tw/map/: screenshot_intersection_1.png.json
tools/: make_resources.py  prune_pyside6.py  qemu_grpc_mirror.py
