[project]
name = "ichikas-auto-assistant"
version = "26.05b1"
description = """
Ichika's Auto Assistant is a helper script
for Project Sekai: Colorful Stage
that automates dailies.
"""
readme = "README.md"
requires-python = "~=3.10.0"
dependencies = [
    "kotonebot[android]==0.13.0",
    "numpy<2.0",
    "onnxruntime==1.14.0 ; sys_platform == 'win32' or sys_platform == 'linux'",
    "onnxruntime ; sys_platform != 'win32'",
    "psutil",
    "PySide6",
    "pydantic",
    "sentry-sdk",
    "thefuzz>=0.22.1",
    "plyer>=2.1.0",
]

[dependency-groups]
dev = [
    "kotonebot[dev]",
    "pyinstaller>=6.15.0",
    "click",
    "ruff",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
]

[tool.ruff.format]
quote-style = "single"

[tool.kotonebot.editor]
prefabs_module = "iaa.game_ui.elements"
resource_path = "resources/"

[tool.kotonebot.variant]                                                                                                                  
variants = ["tw", "cn"]
base = "jp"
path_pattern = "nest"
