[project]
name = "ichikas-auto-assistant"
version = "26.05b2"
description = """
Ichika's Auto Assistant is a helper script
for Project Sekai: Colorful Stage
that automates dailies.
"""
readme = "README.md"
requires-python = "~=3.10.0"
dependencies = [
    "kotonebot[android]==0.14.0",
    "numpy<2.0",
    "onnxruntime==1.14.0 ; sys_platform == 'win32' or sys_platform == 'linux'",
    "onnxruntime ; sys_platform != 'win32'",
    "psutil",
    "PySide6",
    "pydantic",
    "pynput",
    "sentry-sdk",
    "thefuzz>=0.22.1",
    "plyer>=2.1.0",
    "opencv-python @ https://github.com/kotonebot/slim-wheels/releases/download/opencv-v4.10.0-build-26389268581/opencv_python-4.10.0-cp310-cp310-win_amd64.whl ; sys_platform == 'win32'",
    "numpy @ https://github.com/kotonebot/slim-wheels/releases/download/numpy-v1.26.4-noblas-build-25709411083/numpy-1.26.4-cp310-cp310-win_amd64.whl ; sys_platform == 'win32'",
    "av @ https://github.com/kotonebot/slim-wheels/releases/download/pyav-v14.3.0-ffmpeg-n7.1-build-25709420121/av-14.3.0-cp310-cp310-win_amd64.whl ; sys_platform == 'win32'",
]

[dependency-groups]
dev = [
    "kotonebot[dev]",
    "pyinstaller>=6.15.0",
    "click",
    "ruff",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
]

[tool.ruff.format]
quote-style = "single"

[tool.kotonebot.editor]
prefabs_module = "iaa.game_ui.elements"
resource_path = "resources/"

[tool.kotonebot.variant]                                                                                                                  
variants = ["tw", "cn"]
base = "jp"
path_pattern = "nest"
